<resources>
    <string name="app_name">Indoor Navigation</string>
    <string name="kontakt_io_api_key">HwNjzNzwJUDDYftJgIeoQXiOmzobyecS</string>
    <string name="sync">Sync</string>
    <string name="rooms">Rooms</string>
    <string name="edit_rooms">Edit rooms</string>
    <string name="about_user">About user</string>
    <string name="settings">Settings</string>
    <string name="device_name">Device name</string>
    <string name="save">Save</string>
    <string name="enter_your_data">Enter your data</string>
    <string name="saved">Saved</string>
    <string name="name">Name</string>
    <string name="mac">MAC</string>
    <string name="user_image">User image</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

	<!-- Tutorial -->
    <string name="tutorial_skip">Skip</string>
    <string name="tutorial_next">Next</string>
    <string name="tutorial_done">Done</string>
    <string name="tutorial_title1">Requirement</string>
    <string name="tutorial_subtitle1">Bluetooth and Wi-Fi</string>
	<string name="tutorial_title2">Set beacons</string>
	<string name="tutorial_subtitle2">You can use "Set beacons" screen</string>
    <string name="tutorial_title3">Tracking start automatically</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
